fixed navbar links alignment issue and also added hover gray effect

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -12,23 +12,32 @@
 
 .nav-link-container {
   display: flex;
-  width: 90%;
+  max-width: 90%;
   flex-direction: column;
   list-style-type: none;
+  margin: auto;
+  padding: 0;
 }
 
 .nav-link-wrapper {
+  max-width: 100%;
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 10px 20px;
   border-radius: 10px;
 }
 
+.nav-link-wrapper:hover {
+  background-color: #c2c2c2;
+}
+
 .nav-link-text-wrapper {
   display: flex;
+  width: 100%;
   color: inherit;
   text-decoration: none;
   align-items: center;
+  justify-content: center;
 }
 
 .nav-link-text {
